# grpcrow

./: .gitignore  Cargo.toml  build.rs
migrations/: 00_tables.sql  01_mock_data.sql
proto/: read.proto
settings/: development.example.toml  queries.yaml
src/: lib.rs  prelude.rs  queries.rs  settings.rs
src/client/: client.rs
src/components/: db.rs  mod.rs
src/pb/: mod.rs  shelter.rs
src/read/: main.rs  prelude.rs  read.rs
