[package]
name = "grpcrow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
config = { version = "0.15.19", features = ["toml", "yaml"] }
dotenvy = "0.15.7"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"

[[bin]]
name = "read"
path = "src/read/main.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"
